--- a/.gitmodules
+++ b/.gitmodules
@@ -247,3 +247,8 @@
 	url = https://github.com/bouffalolab/bl_iot_sdk_matter.git
 	branch = bl602_release
 	platforms = bl602
+[submodule "third_party/ti_simplelink_sdk/repo_cc32xx"]
+	path = third_party/ti_simplelink_sdk/repo_cc32xx
+	url = https://github.com/TexasInstruments/cc32xx_open_sdk.git
+	branch = main
+	platform = cc32xx
