--- a/src/platform/device.gni
+++ b/src/platform/device.gni
@@ -16,7 +16,7 @@ import("//build_overrides/chip.gni")
 import("${chip_root}/src/ble/ble.gni")
 
 declare_args() {
-  # Device platform layer: cc13x2_26x2, darwin, efr32, esp32, external, freertos, linux, nrfconnect, k32w0, qpg, tizen, cyw30739, bl602, none.
+  # Device platform layer: cc13x2_26x2, cc32xx, darwin, efr32, esp32, external, freertos, linux, nrfconnect, k32w0, qpg, tizen, cyw30739, bl602, none.
 
   chip_device_platform = "auto"
   chip_platform_target = ""
@@ -60,7 +60,8 @@ declare_args() {
       chip_device_platform == "linux" || chip_device_platform == "esp32" ||
       chip_device_platform == "mbed" || chip_device_platform == "tizen" ||
       chip_device_platform == "android" || chip_device_platform == "ameba" ||
-      chip_device_platform == "webos" || chip_device_platform == "bl602"
+      chip_device_platform == "webos" || chip_device_platform == "cc32xx" ||
+      chip_device_platform == "bl602"
 
   # Enable ble support.
   if (chip_device_platform == "fake") {
@@ -78,7 +79,8 @@ declare_args() {
   # Select DNS-SD implementation
   if (chip_device_platform == "linux" || chip_device_platform == "esp32" ||
       chip_device_platform == "mbed" || chip_device_platform == "p6" ||
-      chip_device_platform == "ameba" || chip_device_platform == "webos") {
+      chip_device_platform == "ameba" || chip_device_platform == "webos" ||
+      chip_device_platform == "cc32xx") {
     chip_mdns = "minimal"
   } else if (chip_device_platform == "darwin" ||
              chip_device_platform == "cc13x2_26x2" || current_os == "android" ||
@@ -93,6 +95,8 @@ declare_args() {
 _chip_device_layer = "none"
 if (chip_device_platform == "cc13x2_26x2") {
   _chip_device_layer = "cc13x2_26x2"
+} else if (chip_device_platform == "cc32xx") {
+  _chip_device_layer = "cc32xx"
 } else if (chip_device_platform == "darwin") {
   _chip_device_layer = "Darwin"
 } else if (chip_device_platform == "efr32") {
@@ -171,9 +175,10 @@ assert(
     (current_os != "freertos" && chip_device_platform == "none") ||
         chip_device_platform == "fake" ||
         chip_device_platform == "cc13x2_26x2" ||
-        chip_device_platform == "darwin" || chip_device_platform == "efr32" ||
-        chip_device_platform == "esp32" || chip_device_platform == "external" ||
-        chip_device_platform == "linux" || chip_device_platform == "tizen" ||
+        chip_device_platform == "cc32xx" || chip_device_platform == "darwin" ||
+        chip_device_platform == "efr32" || chip_device_platform == "esp32" ||
+        chip_device_platform == "external" || chip_device_platform == "linux" ||
+        chip_device_platform == "tizen" ||
         chip_device_platform == "nrfconnect" ||
         chip_device_platform == "k32w0" || chip_device_platform == "qpg" ||
         chip_device_platform == "telink" || chip_device_platform == "mbed" ||
