--- a/src/app/tests/suites/certification/PICS.yaml
+++ b/src/app/tests/suites/certification/PICS.yaml
@@ -321,6 +321,7 @@ PICS:
           "The optional key PI MAY provide additional information for pairing."
       id: PI_KEY
 
+    #Prompt
     - label: "Prompts user for input. Unable to run in CI"
       id: PICS_USER_PROMPT
 
@@ -329,3 +330,9 @@ PICS:
 
     - label: "Level Control for Lighting"
       id: OO_LT
+
+    #Flow measurement
+    - label:
+          "Can the MeasuredValue attribute changed by physical control at the
+          device?"
+      id: MANUAL_FLOW_CHANGE
