add device event to JNI channel

--- a/examples/tv-app/android/BUILD.gn
+++ b/examples/tv-app/android/BUILD.gn
@@ -65,6 +65,8 @@ shared_library("jni") {
     "java/TVApp-JNI.cpp",
     "java/WakeOnLanManager.cpp",
     "java/WakeOnLanManager.h",
+    "java/DeviceCallbacks.cpp",
+    "java/DeviceCallbacks.h",
   ]
 
   deps = [
@@ -128,6 +130,7 @@ android_library("java") {
     "java/src/com/tcl/chip/tvapp/TvAppCallback.java",
     "java/src/com/tcl/chip/tvapp/WakeOnLanManager.java",
     "java/src/com/tcl/chip/tvapp/WakeOnLanManagerStub.java",
+    "java/src/com/tcl/chip/tvapp/DeviceEventProvider.java",
   ]
 
   javac_flags = [ "-Xlint:deprecation" ]
