--- a/src/lib/core/core.gni
+++ b/src/lib/core/core.gni
@@ -33,6 +33,13 @@ declare_args() {
   # Enable automation logging.
   chip_automation_logging = chip_logging
 
+  # Configure the maximum size for logged messages
+  if (current_os == "linux" || current_os == "mac") {
+    chip_log_message_max_size = 1708 # Allow base64 encoding of 1 MTU (4 * (1280 / 3) + padding
+  } else {
+    chip_log_message_max_size = 256
+  }
+
   # Enable pigweed tokenizer logging.
   chip_pw_tokenizer_logging = false
 
