--- a/examples/chef/linux/BUILD.gn
+++ b/examples/chef/linux/BUILD.gn
@@ -40,9 +40,7 @@ chip_data_model("chef-data-model") {
 }
 
 executable("${sample_name}") {
-  sources = [
-    "${project_dir}/linux/main.cpp",
-  ]
+  sources = [ "${project_dir}/linux/main.cpp" ]
 
   deps = [
     ":chef-data-model",
