Changed the example/bridge app have the bridge on a non-zero endpoint ID.
The example/bridge-app was updated to use a non-zero endpoint-ID.
The bridge/aggregator is now on endpoint 1. All endpoint IDs show on both
endpoint ID 0, and the dynamic deivces added to the bridge show on the
bridge endpoint ID 1 as well.

--- a/examples/bridge-app/linux/BUILD.gn
+++ b/examples/bridge-app/linux/BUILD.gn
@@ -21,6 +21,7 @@ assert(chip_build_tools)
 executable("chip-bridge-app") {
   sources = [
     "${chip_root}/examples/tv-app/tv-common/include/CHIPProjectAppConfig.h",
+    "${chip_root}/examples/bridge-app/linux/bridged-actions-stub.cpp",
     "Device.cpp",
     "include/Device.h",
     "main.cpp",
