--- a/examples/all-clusters-minimal-app/nrfconnect/prj_release.conf
+++ b/examples/all-clusters-minimal-app/nrfconnect/prj_release.conf
@@ -39,7 +39,7 @@ CONFIG_RESET_ON_FATAL_ERROR=y
 # CHIP configuration
 CONFIG_CHIP_PROJECT_CONFIG="main/include/CHIPProjectConfig.h"
 
-# CHIP PID: 32769 == 0x8001 (all-clusters-app)
+# CHIP PID: 32769 == 0x8001 (all-clusters-minimal-app)
 CONFIG_CHIP_DEVICE_PRODUCT_ID=32769
 
 # Disable all debug features
