--- a/.github/workflows/examples-cc13x2x7_26x2x7.yaml
+++ b/.github/workflows/examples-cc13x2x7_26x2x7.yaml
@@ -106,6 +106,13 @@ jobs:
                     cc13x2_26x2 LP_CC2652R7 all-clusters-app \
                     out/artifacts/cc13x2x7_26x2x7-all-clusters/chip-LP_CC2652R7-all-clusters-example.out \
                     /tmp/bloat_reports/
+            - name: Get All Clusters Minimal App size stats
+              timeout-minutes: 5
+              run: |
+                  .environment/pigweed-venv/bin/python3 scripts/tools/memory/gh_sizes.py \
+                    cc13x2_26x2 LP_CC2652R7 all-clusters-minimal-app \
+                    out/artifacts/cc13x2x7_26x2x7-all-clusters-minimal/chip-LP_CC2652R7-all-clusters-minimal-example.out \
+                    /tmp/bloat_reports/
             - name: Get Shell App size stats
               timeout-minutes: 5
               run: |
