--- a/.github/workflows/examples-linux-imx.yaml
+++ b/.github/workflows/examples-linux-imx.yaml
@@ -69,6 +69,13 @@ jobs:
                      "./scripts/build/build_examples.py \
                          --target imx-all-clusters-app build \
                      "
+            - name: Build all-cluster-minimal
+              timeout-minutes: 30
+              run: |
+                  ./scripts/run_in_build_env.sh \
+                     "./scripts/build/build_examples.py \
+                         --target imx-all-clusters-minimal-app build \
+                     "
             - name: Build ota-provider-app
               timeout-minutes: 30
               run: |
