--- a/examples/all-clusters-minimal-app/all-clusters-common/BUILD.gn
+++ b/examples/all-clusters-minimal-app/all-clusters-common/BUILD.gn
@@ -17,9 +17,9 @@ import("//build_overrides/chip.gni")
 import("${chip_root}/src/app/chip_data_model.gni")
 
 chip_data_model("all-clusters-common") {
-  zap_file = "all-clusters-app.zap"
+  zap_file = "all-clusters-minimal-app.zap"
 
   zap_pregenerated_dir =
-      "${chip_root}/zzz_generated/all-clusters-app/zap-generated"
+      "${chip_root}/zzz_generated/all-clusters-minimal-app/zap-generated"
   is_server = true
 }
