--- a/examples/all-clusters-minimal-app/linux/BUILD.gn
+++ b/examples/all-clusters-minimal-app/linux/BUILD.gn
@@ -31,7 +31,7 @@ source_set("chip-all-clusters-common") {
   ]
 
   deps = [
-    "${chip_root}/examples/all-clusters-app/all-clusters-common",
+    "${chip_root}/examples/all-clusters-minimal-app/all-clusters-common",
     "${chip_root}/examples/platform/linux:app-main",
     "${chip_root}/src/app/tests/suites/credentials:dac_provider",
     "${chip_root}/src/lib",
@@ -54,68 +54,50 @@ source_set("chip-lock-app-common") {
     "${chip_root}/examples/lock-app/linux/src/ZCLDoorLockCallbacks.cpp",
   ]
 
-  deps = [ "${chip_root}/examples/all-clusters-app/all-clusters-common" ]
+  deps =
+      [ "${chip_root}/examples/all-clusters-minimal-app/all-clusters-common" ]
 
   include_dirs = [ "${chip_root}/examples/lock-app/linux/include" ]
 
   cflags = [ "-Wconversion" ]
 }
 
-if (is_libfuzzer) {
-  executable("chip-all-clusters-app-fuzzing") {
-    sources = [ "fuzzing-main.cpp" ]
+executable("chip-all-clusters-minimal-app") {
+  sources = [ "main.cpp" ]
 
-    deps = [
-      ":chip-all-clusters-common",
-      ":chip-lock-app-common",
-      "${chip_root}/examples/platform/linux:app-main",
+  deps = [
+    ":chip-all-clusters-common",
+    ":chip-lock-app-common",
+    "${chip_root}/examples/platform/linux:app-main",
+  ]
+
+  cflags = [ "-Wconversion" ]
+
+  include_dirs =
+      [ "${chip_root}/examples/all-clusters-app/all-clusters-common/include" ]
+
+  output_dir = root_out_dir
+}
+
+if (chip_device_platform == "darwin") {
+  action("codesign") {
+    script = "entitlements/codesign.py"
+    public_deps = [ ":chip-all-clusters-minimal-app" ]
+
+    args = [
+      "--target_path",
+      rebase_path("${root_build_dir}/chip-all-clusters-minimal-app",
+                  root_build_dir),
+      "--log_path",
+      rebase_path("${root_build_dir}/codesign_log.txt", root_build_dir),
     ]
 
-    cflags = [ "-Wconversion" ]
-
-    output_dir = root_out_dir
-  }
-} else {
-  executable("chip-all-clusters-app") {
-    sources = [ "main.cpp" ]
-
-    deps = [
-      ":chip-all-clusters-common",
-      ":chip-lock-app-common",
-      "${chip_root}/examples/platform/linux:app-main",
-    ]
-
-    cflags = [ "-Wconversion" ]
-
-    include_dirs =
-        [ "${chip_root}/examples/all-clusters-app/all-clusters-common/include" ]
-
-    output_dir = root_out_dir
-  }
-
-  if (chip_device_platform == "darwin") {
-    action("codesign") {
-      script = "entitlements/codesign.py"
-      public_deps = [ ":chip-all-clusters-app" ]
-
-      args = [
-        "--target_path",
-        rebase_path("${root_build_dir}/chip-all-clusters-app", root_build_dir),
-        "--log_path",
-        rebase_path("${root_build_dir}/codesign_log.txt", root_build_dir),
-      ]
-
-      output_name = "codesign_log.txt"
-      outputs = [ "${root_build_dir}/${output_name}" ]
-    }
+    output_name = "codesign_log.txt"
+    outputs = [ "${root_build_dir}/${output_name}" ]
   }
 }
 
 group("linux") {
   deps = []
-  if (is_libfuzzer) {
-    deps += [ ":chip-all-clusters-app-fuzzing" ]
-  } else {
-    deps += [ ":chip-all-clusters-app" ]
-  }
+  deps += [ ":chip-all-clusters-minimal-app" ]
 }
