--- a/examples/all-clusters-minimal-app/nrfconnect/prj.conf
+++ b/examples/all-clusters-minimal-app/nrfconnect/prj.conf
@@ -47,5 +47,5 @@ CONFIG_CHIP_QSPI_NOR=n
 # CHIP configuration
 CONFIG_CHIP_PROJECT_CONFIG="main/include/CHIPProjectConfig.h"
 
-# CHIP PID: 32769 == 0x8001 (all-clusters-app)
+# CHIP PID: 32769 == 0x8001 (all-clusters-minimal-app)
 CONFIG_CHIP_DEVICE_PRODUCT_ID=32769
