--- a/examples/all-clusters-minimal-app/nrfconnect/prj_dfu.conf
+++ b/examples/all-clusters-minimal-app/nrfconnect/prj_dfu.conf
@@ -41,5 +41,5 @@ CONFIG_RESET_ON_FATAL_ERROR=n
 # CHIP configuration
 CONFIG_CHIP_PROJECT_CONFIG="main/include/CHIPProjectConfig.h"
 
-# CHIP PID: 32769 == 0x8001 (all-clusters-app)
+# CHIP PID: 32769 == 0x8001 (all-clusters-minimal-app)
 CONFIG_CHIP_DEVICE_PRODUCT_ID=32769
