Add support to delegate key storage and signing to the Java layer
To support the use of the Android KeyStore to securely hold the private
keys used for operational control, we cannot pass the raw private key to
the SDK.

This adds a bridging layer for Java that allows interception at the Java
layer of key generation requests as well as ECDSA signing.

Tested internally by delegating to a KeyStore. Tested externally via
standard commissioning in CHIPTool.

--- a/src/controller/java/BUILD.gn
+++ b/src/controller/java/BUILD.gn
@@ -86,6 +86,7 @@ android_library("java") {
     "src/chip/devicecontroller/ChipDeviceController.java",
     "src/chip/devicecontroller/ChipDeviceControllerException.java",
     "src/chip/devicecontroller/GetConnectedDeviceCallbackJni.java",
+    "src/chip/devicecontroller/KeypairDelegate.java",
     "src/chip/devicecontroller/NetworkCredentials.java",
     "src/chip/devicecontroller/NetworkLocation.java",
     "src/chip/devicecontroller/PaseVerifierParams.java",
