Rename CASESessionManager -> CASEDeviceManager

--- a/src/app/BUILD.gn
+++ b/src/app/BUILD.gn
@@ -66,8 +66,8 @@ static_library("app") {
     "CASEClient.cpp",
     "CASEClient.h",
     "CASEClientPool.h",
-    "CASESessionManager.cpp",
-    "CASESessionManager.h",
+    "CASEDeviceManager.cpp",
+    "CASEDeviceManager.h",
     "ChunkedWriteCallback.cpp",
     "ChunkedWriteCallback.h",
     "ClusterStateCache.cpp",
