add JNI channel to dispatch device event (#18837)
* add device event to JNI channel

* restyled

* format changes

* one more restyled

--- a/examples/tv-app/android/BUILD.gn
+++ b/examples/tv-app/android/BUILD.gn
@@ -48,6 +48,8 @@ shared_library("jni") {
     "java/ContentAppCommandDelegate.h",
     "java/ContentLauncherManager.cpp",
     "java/ContentLauncherManager.h",
+    "java/DeviceCallbacks.cpp",
+    "java/DeviceCallbacks.h",
     "java/JNIDACProvider.cpp",
     "java/JNIDACProvider.h",
     "java/KeypadInputManager.cpp",
@@ -110,6 +112,7 @@ android_library("java") {
     "java/src/com/tcl/chip/tvapp/ContentLaunchSearchParameter.java",
     "java/src/com/tcl/chip/tvapp/DACProvider.java",
     "java/src/com/tcl/chip/tvapp/DACProviderStub.java",
+    "java/src/com/tcl/chip/tvapp/DeviceEventProvider.java",
     "java/src/com/tcl/chip/tvapp/KeypadInputManager.java",
     "java/src/com/tcl/chip/tvapp/KeypadInputManagerStub.java",
     "java/src/com/tcl/chip/tvapp/LevelManager.java",
